<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llTitleSection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48tedp"
        android:background="@color/accent_color"
        android:gravity="center"
        android:paddingStart="@dimen/_8tedp"
        android:paddingEnd="@dimen/_8tedp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_24tesp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitleSection">

        <LinearLayout
            android:layout_marginTop="@dimen/_8tedp"
            android:layout_marginBottom="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/name_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalSavingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/total_savings_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotalSavings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalDebtCollectedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/total_debt_collected_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvTotalDebtCollected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLastPaymentDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/last_payment_date_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvLastPaymentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLastDownPaymentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/last_down_payment_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvLastDownPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvRemainingDebtText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/remaining_debt_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvRemainingDebt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPayableInterestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/payable_interest_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPayableInterest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPayableSavingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/payable_saving_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvPayableSaving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="@dimen/_4tedp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvFineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:text="@string/fine_home"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvFine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/rlPay"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPayIcon"
                android:src="@drawable/pay_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/pay" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlHome"
            android:gravity="center"
            android:background="@color/secondary_color"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivHomeIcon"
                android:src="@drawable/home_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/home" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlProfile"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivProfileIcon"
                android:src="@drawable/profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>