<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_color"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llTitleSection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_214tedp"
        android:background="@color/accent_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHamroSamuha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamro_samuha"
            android:textColor="@color/black"
            android:textSize="@dimen/_24tesp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMainBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_48tedp"
        android:paddingBottom="@dimen/_48tedp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTitleSection">

        <TextView
            android:id="@+id/tvEnterYourPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_phone_number_and_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16tesp"
            android:layout_marginTop="@dimen/_16tesp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llNepaliLang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48tedp"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_40tedp"
            android:layout_marginEnd="@dimen/_40tedp"
            android:layout_marginTop="@dimen/_24tedp"
            android:layout_marginBottom="@dimen/_12tedp"
            android:text="@string/nep_nepali"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterYourPhone">
            <EditText
                android:id="@+id/etPhoneNumberEmail"
                android:hint="@string/phone_number_or_email"
                android:paddingStart="@dimen/_12tedp"
                android:paddingEnd="@dimen/_12tedp"
                android:textColorHint="@color/black"
                android:autofillHints="name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:background="@drawable/input_field_shape"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black"
                tools:ignore="TextFields" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnEngLang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48tedp"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_40tedp"
            android:layout_marginEnd="@dimen/_40tedp"
            android:layout_marginTop="@dimen/_12tedp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llNepaliLang">
            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:paddingStart="@dimen/_12tedp"
                android:paddingEnd="@dimen/_12tedp"
                android:textColorHint="@color/black"
                android:background="@drawable/input_field_shape"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textVisiblePassword"
                android:textSize="@dimen/_16tesp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48tedp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_40tedp"
            android:layout_marginEnd="@dimen/_40tedp"
            android:layout_marginTop="@dimen/_48tedp"
            android:background="@drawable/submit_btn_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEngLang" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAllRightsReserved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvAllReserved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_reserved"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>